adiconado HC no projeto

--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
@@ -1,12 +1,20 @@
 {
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "HC - RCN",
+        "Uri": "https://localhost:44379/api/hc"
+      }
+    ]
+  },
     "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     },
     "ConnectionStrings": {
-        "sql": "Server=DELL;Database=rcnapi;Trusted_Connection=True;"
+      "sql": "Server=DELL;Database=rcnapi;Trusted_Connection=True;"
     }
-}
+  }
