--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
@@ -7,14 +7,16 @@
       }
     ]
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
-    },
-    "ConnectionStrings": {
-      "sql": "Server=DELL;Database=rcnapi;Trusted_Connection=True;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "sql": "Server=DELL;Database=rcnapi;Trusted_Connection=True;"
+  },
+  "KissLog.OrganizationId": "5c5956d7-02eb-4bce-a6e1-3a99f17280cd",
+  "KissLog.ApplicationId": "7de366cd-ded1-485d-8c5c-27e79dbfa6c4"
+}
