add config, user secret, swagger

--- a/modulo II/RCN.Projeto/src/RCN.Api/RCN.Api.csproj
+++ b/modulo II/RCN.Projeto/src/RCN.Api/RCN.Api.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>d24f226e-f46c-4e14-9814-8911e0a652c5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
