--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "RCNSettings": {
+    "Nome": "meu nome",
+    "EmailConfig": {
+      "Email": "email@email.com",
+      "Senha": "senha123"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
