--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
@@ -1,10 +1,16 @@
 {
-  
-    "Nome": "meu nome",
-    "EmailConfig": {
-      "Email": "email@email.com",
-      "Senha": "senha123"
-    
+  "SettingsJWT": {
+    "Secret": "meu_segredo_@123",
+    "ExpiracaoHoras": 2,
+    "Emissor": "RCN.API",
+    "ValidoEm": "https://localhost"
+  },
+
+  "Nome": "meu nome",
+  "EmailConfig": {
+    "Email": "email@email.com",
+    "Senha": "senha123"
+
   },
 
   "HealthChecksUI": {
