--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.json
@@ -1,15 +1,35 @@
 {
-  "RCNSettings": {
-    "Nome": "meu nome",
-    "EmailConfig": {
-      "Email": "email@email.com",
-      "Senha": "senha123"
-    }
+
+  "Nome": "meu nome",
+  "EmailConfig": {
+    "Email": "email@email.com",
+    "Senha": "senha123"
+
+  },
+  "SettingsJWT": {
+    "Secret": "RODRIGO.CALAZANS123@",
+    "ExpiracaoHoras": 1,
+    "Emissor": "RCN.API",
+    "ValidoEm": "https://localhost"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "HC - RCN",
+        "Uri": "https://localhost:44379/api/hc"
+      }
+    ]
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "sql": "Server=DELL;Database=rcnapi_22;Trusted_Connection=True;"
+  },
+  "KissLog.OrganizationId": "5c5956d7-02eb-4bce-a6e1-3a99f17280cd",
+  "KissLog.ApplicationId": "7de366cd-ded1-485d-8c5c-27e79dbfa6c4"
 }
