--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
@@ -1,10 +1,4 @@
 {
-  "SettingsJWT": {
-    "Secret": "meu_segredo_@123",
-    "ExpiracaoHoras": 2,
-    "Emissor": "RCN.API",
-    "ValidoEm": "https://localhost"
-  },
 
   "Nome": "meu nome",
   "EmailConfig": {
@@ -12,7 +6,12 @@
     "Senha": "senha123"
 
   },
-
+  "SettingsJWT": {
+    "Secret": "RODRIGO.CALAZANS123@",
+    "ExpiracaoHoras": 1,
+    "Emissor": "RCN.API",
+    "ValidoEm": "https://localhost"
+  },
   "HealthChecksUI": {
     "HealthChecks": [
       {
@@ -29,7 +28,7 @@
     }
   },
   "ConnectionStrings": {
-    "sql": "conexao_Banco_dados"
+    "sql": "Server=DELL;Database=rcnapi_22;Trusted_Connection=True;"
   },
   "KissLog.OrganizationId": "5c5956d7-02eb-4bce-a6e1-3a99f17280cd",
   "KissLog.ApplicationId": "7de366cd-ded1-485d-8c5c-27e79dbfa6c4"
