--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Teste.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Teste.json
@@ -1,4 +1,17 @@
 {
+
+  "Nome": "meu nome",
+  "EmailConfig": {
+    "Email": "email@email.com",
+    "Senha": "senha123"
+
+  },
+  "SettingsJWT": {
+    "Secret": "RODRIGO.CALAZANS123@",
+    "ExpiracaoHoras": 1,
+    "Emissor": "RCN.API",
+    "ValidoEm": "https://localhost"
+  },
   "HealthChecksUI": {
     "HealthChecks": [
       {
@@ -15,7 +28,7 @@
     }
   },
   "ConnectionStrings": {
-    "sql": "Server=DELL;Database=rcnapi_Teste;Trusted_Connection=True;"
+    "sql": "Server=DELL;Database=rcnapi_22;Trusted_Connection=True;"
   },
   "KissLog.OrganizationId": "5c5956d7-02eb-4bce-a6e1-3a99f17280cd",
   "KissLog.ApplicationId": "7de366cd-ded1-485d-8c5c-27e79dbfa6c4"
