--- a/modulo III/AppAngular/package.json
+++ b/modulo III/AppAngular/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular2-text-mask": "^9.0.0",
+    "ng-brazil": "^1.4.7",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
