add path imagem

--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
 
   "Nome": "meu nome",
+  "PathImagemAngular": "C:\\Treinamento\\treinamento\\modulo III\\ProjetoFinal\\src\\assets",
   "EmailConfig": {
     "Email": "email@email.com",
     "Senha": "senha123"
