--- a/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Teste.json
+++ b/modulo II/RCN.Projeto/src/RCN.Api/appsettings.Teste.json
@@ -1,5 +1,5 @@
 {
-
+  "PathImagemAngular": "C:\\Treinamento\\treinamento\\modulo III\\ProjetoFinal\\src\\assets",
   "Nome": "meu nome",
   "EmailConfig": {
     "Email": "email@email.com",
